--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-*.so
+
+# Distribution / packaging
 .Python
 build/
 develop-eggs/
@@ -19,110 +20,23 @@ wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
-
-# Virtual environments
-venv/
-env/
-ENV/
-.venv/
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-.vscode/settings.json
-.vscode/tasks.json
-.vscode/launch.json
-.vscode/extensions.json
-
-# OS
-.DS_Store
-Thumbs.db
-ehthumbs.db
-Icon?
-.directory
-*.nfs
-
-# Logs
-*.log
-offline_dubbing.log
-logs/
-*.log.*
-
-# Local configuration
-config/local_settings.py
-.env
-.env.local
-.env.dev
-.env.prod
-.env.staging
-.env.testing
-.env.backup
-
-# Application specific
-Outputs/
-Inputs/
-tmp/
-temp/
-*.tmp
-*.temp
-
-# Models (these should not be committed due to size)
-Models/**/*
-!Models/
-!Models/whisper/
-!Models/nllb/
-!Models/xtts/
-
-# User data
-*.csv
-*.json
-*.xml
-
-# Compiled files
-*.pyc
-*.pyo
-*.pyd
-*.pyd.bak
-*.py.class
-
-# Testing
-.pytest_cache/
-.coverage
-htmlcov/
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-
-# Distribution / packaging
-.Python
-*.egg-info/
-.egg-info/
-.eggs/
-eggs/
-lib/
-lib64/
-parts/
-sdist/
-develop-eggs/
-.installed.cfg
-*.egg
 
 # PyInstaller
 *.manifest
 *.spec
 
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
 .nox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
 coverage.xml
 *.cover
 *.py,cover
@@ -160,12 +74,35 @@ profile_default/
 ipython_config.py
 
 # pyenv
+#   For a library or package, you might want to ignore these files since the code is
+#   intended to run in multiple environments; otherwise, check them in:
 .python-version
 
 # pipenv
+#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
+#   However, in case of collaboration, if having platform-specific dependencies or dependencies
+#   having no cross-platform support, pipenv may install dependencies that don't work, or not
+#   install all needed dependencies.
 Pipfile.lock
 
-# PEP 582
+# poetry
+#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
+#   This is especially recommended for binary packages to ensure reproducibility, and is more
+#   commonly ignored for libraries. Update as appropriate.
+poetry.lock
+#   poetry envs can be very large, exclude all .venv, except virtualenvs specifically
+#   named my-venv, as the default behavior is to name venvs with some hash of the
+#   project directory or the environment name.
+.venv
+venv/
+env/
+
+# pdm
+#   Similar to Pipfile.lock, it is generally recommended to keep pdm.lock in version control.
+pdm.lock
+__pypackages__/
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
 __pypackages__/
 
 # Celery stuff
@@ -199,5 +136,40 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
-# Pyre
+# Pyre type checker
 .pyre/
+
+# IDEs
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+desktop.ini
+
+# Model files (these should be downloaded separately)
+Models/whisper/*
+Models/nllb/*
+Models/xtts/*
+
+# Output files (generated during processing)
+Outputs/*
+
+# Log files
+*.log
+
+# Virtual environment
+venv/
+
+# Temporary files
+*.tmp
+*.temp
